2014-10-11  Mirko Vukovic  <mirko.vukovic@us.tel.com>

	* gnuplot-interface.lisp (default-terminal): New function with
	error checking.
	(start-gnuplot): Added code-block for CCL

2014-10-04  Mirko Vukovic  <mirko.vukovic@us.tel.com>

	* gnuplot-interface.lisp (executable-path): New function with some
	error checking to flag some errors if the path is not properly
	defined.

2013-01-31  Mirko Vukovic  <mirko.vukovic@us.tel.com>

	* examples.lisp: Updated and cleaned up examples

	* gnuplot-interface.lisp (echo-command, gnuplot-echo-command
	*command-copy*): Removed these commands and special variable.
	Command echoing is now handled with the
	with-captured-gnuplot-input macro
	(with-captured-gnuplot-input): New macro that replaces the
	functionality of echo commands


	* gnuplot-interface.asd (#:gnuplot-interface): Removed
	"gnuplot-interface" from the components list.  The streams in that
	file are out of date

	* gnuplot-interface.lisp (command): Enabled
	`get-output-stream-string' to clear the echo buffer.  This buffer
	would overflow after plotting large data sets.  I may want to
	reconsider stream architecture.  Maybe I should disable the echo,
	and enable it only when required.

2013-01-11  Mirko Vukovic  <mirko.vukovic@us.tel.com>

	* gnuplot-interface.lisp (send-line): Modified to only send line,
	without flushing output.  Flushing output is done with
	`finish-command'
	(finish-command): New function

2013-01-06  Mirko Vukovic  <mirko.vukovic@us.tel.com>

	* gnuplot-interface.lisp (gnuplot-for-windows-p)
	(filename-normalizer): Functions for normalizing pathnames for
	underlying OS

2012-11-21  Mirko Vukovic  <mirko.vukovic@us.tel.com>

	* gnuplot-interface.lisp (start-gnuplot): Fixed bug in sbcl.  Now
	calling *executable*
	(*executable*): Added darwin option for macports

2012-11-20  Mirko Vukovic  <mirko.vukovic@us.tel.com>

	* gnuplot-interface-package-def.lisp (#:gnuplot-interface):
	Removed use of EXTERNAL-PROGRAM, as it currently does not work
